# linhello

./: .gitignore  .packit.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
assets/: demo.webm
crates/aegyra-biometrics/: Cargo.toml
crates/aegyra-biometrics/src/: align.rs  camera.rs  detect.rs  embed.rs  enroll.rs  lib.rs  matcher.rs  ort_init.rs
crates/aegyra-cli/: Cargo.toml
crates/aegyra-cli/src/: main.rs
crates/aegyra-common/: Cargo.toml
crates/aegyra-common/src/: client.rs  ipc.rs  lib.rs
crates/aegyra-core/: Cargo.toml
crates/aegyra-core/src/: crypto.rs  envelope.rs  lib.rs  memlock.rs  pcrsig.rs  policy.rs  tpm.rs
crates/aegyra-daemon/: Cargo.toml
crates/aegyra-daemon/src/: capabilities.rs  main.rs  users.rs
crates/aegyra-daemon/tests/: ipc.rs
crates/aegyra-liveness/: Cargo.toml
crates/aegyra-liveness/src/: antispoof.rs  device_binding.rs  ir.rs  lib.rs  orientation.rs
crates/aegyra-pam/: Cargo.toml
crates/aegyra-pam/src/: lib.rs
crates/aegyra-secureboot/: Cargo.toml
crates/aegyra-secureboot/src/: lib.rs
crates/linhello-biometrics/: Cargo.toml
crates/linhello-biometrics/src/: align.rs  camera.rs  detect.rs  embed.rs  enroll.rs  ir_emitter.rs  lib.rs  matcher.rs  ort_init.rs
crates/linhello-cli/: Cargo.toml
crates/linhello-cli/src/: install.rs  main.rs  pamwire.rs  tui.rs  update.rs
crates/linhello-common/: Cargo.toml
crates/linhello-common/src/: biopolicy.rs  client.rs  config.rs  ipc.rs  lib.rs  platform.rs
crates/linhello-core/: Cargo.toml
crates/linhello-core/src/: crypto.rs  envelope.rs  lib.rs  memlock.rs  pcrsig.rs  policy.rs  recovery.rs  tpm.rs
crates/linhello-daemon/: Cargo.toml
crates/linhello-daemon/src/: capabilities.rs  main.rs  users.rs
crates/linhello-daemon/tests/: ipc.rs
crates/linhello-fingerprint/: Cargo.toml
crates/linhello-fingerprint/src/: lib.rs
crates/linhello-liveness/: Cargo.toml
crates/linhello-liveness/src/: antispoof.rs  device.rs  device_binding.rs  ir.rs  lib.rs  orientation.rs  temporal.rs
crates/linhello-pam/: Cargo.toml
crates/linhello-pam/src/: lib.rs
crates/linhello-secureboot/: Cargo.toml
crates/linhello-secureboot/src/: lib.rs
docs/: setup-signed-pcr.md
docs/design/: cross-platform-and-setup-ux.md  fingerprint-modality.md  rgb-liveness-research.md  signed-pcr-policy.md  tiered-biometric-policy.md
etc/kernel/install.d/: 95-linhello.install
etc/kernel/postinst.d/: zz-linhello
etc/pacman.d/hooks/: aegyra-reseal.hook  linhello-reseal.hook
etc/pam.d/: aegyra-auth  linhello-auth
etc/pam.d/examples/: gdm-password  lightdm  sddm  sudo  system-login
etc/selinux/: linhello-daemon.fc  linhello-daemon.te  linhello.te
etc/systemd/: aegyrad.service  linhellod-camera-refresh.service  linhellod.service
etc/systemd/system-sleep/: linhello-resume
etc/sysusers.d/: linhello.conf
etc/udev/rules.d/: 72-linhello-camera.rules
models/: README.md  SHA256SUMS  antispoof.NOTICE  antispoof.onnx  antispoof_4.onnx
packaging/: README.md  trusted-signer.asc
packaging/arch/: PKGBUILD  aegyra.install  linhello.install
packaging/debian/: changelog  control  linhello.postinst  linhello.prerm  rules
packaging/fedora/: COPR.md  build-srpms.sh  linhello.spec  onnxruntime.spec
pam/: pam_faceauth.c  pam_linhello.c
scripts/: aegyra-reseal-hook  convert_antispoof.py  linhello-keyring-diag  linhello-reseal-hook  migrate-to-linhello.sh
