[workspace]
resolver = "2"
members = [
    "crates/linhello-common",
    "crates/linhello-core",
    "crates/linhello-biometrics",
    "crates/linhello-liveness",
    "crates/linhello-secureboot",
    "crates/linhello-fingerprint",
    "crates/linhello-pam",
    "crates/linhello-daemon",
    "crates/linhello-cli",
]

[workspace.package]
version = "0.4.2"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
repository = "https://github.com/archledger/linhello"

[workspace.dependencies]
linhello-common = { path = "crates/linhello-common" }
linhello-core = { path = "crates/linhello-core" }
linhello-biometrics = { path = "crates/linhello-biometrics" }
linhello-liveness = { path = "crates/linhello-liveness" }
linhello-secureboot = { path = "crates/linhello-secureboot" }
linhello-fingerprint = { path = "crates/linhello-fingerprint" }

anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize = { version = "1.7", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
