[package]
name = "aegyra-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "aegyra"
path = "src/main.rs"

[dependencies]
aegyra-common.workspace = true
aegyra-core.workspace = true
aegyra-biometrics.workspace = true
aegyra-secureboot.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
libc = "0.2"
tracing.workspace = true
tracing-subscriber.workspace = true
