[package]
name = "aegyra-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aegyra-common.workspace = true
aegyra-secureboot.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
zeroize.workspace = true
tracing.workspace = true

tss-esapi = "7.5"
rand = "0.8"
base64 = "0.22"
libc = "0.2"
