[package]
name = "aegyra-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "aegyrad"
path = "src/main.rs"

[dependencies]
aegyra-common.workspace = true
aegyra-core.workspace = true
aegyra-biometrics.workspace = true
aegyra-liveness.workspace = true
aegyra-secureboot.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true }
serde_json.workspace = true
zeroize.workspace = true
libc = "0.2"

[dev-dependencies]
aegyra-common.workspace = true
libc = "0.2"
