[package]
name = "linhello-biometrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
linhello-common.workspace = true
linhello-liveness.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }

v4l = "0.14"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ndarray = "0.17"

# ONNX Runtime bindings — load the system libonnxruntime at runtime
# (install: `sudo pacman -S onnxruntime-cpu`). Set ORT_DYLIB_PATH to override.
# `api-24` pins the bound OrtApi level to ONNX Runtime 1.24 (the runtime the COPR
# ships): rc.12 gates the API surface behind `api-NN` features and compiles its
# execution-provider modules (e.g. VitisAI) unconditionally, so with
# default-features off an api level must be selected explicitly or `ort` won't build.
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "api-24"] }
