[package]
name = "linhello-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "linhello"
path = "src/main.rs"

[dependencies]
linhello-common.workspace = true
linhello-core.workspace = true
linhello-biometrics.workspace = true
linhello-secureboot.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rpassword = "7"
zeroize.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
