[package]
name = "linhello-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
linhello-common.workspace = true
linhello-secureboot.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
zeroize.workspace = true
tracing.workspace = true

tss-esapi = "7.5"
rand = "0.8"
base64 = "0.22"
aes-gcm = "0.10"
libc = "0.2"
# Parse the systemd PCR-policy public key (SPKI PEM) for TPM2 LoadExternal.
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
# Argon2id KDF for the dedicated recovery passphrase (separate from the login
# password). Memory-hard so an offline attacker can't cheaply brute-force it.
argon2 = "0.5"
