[package]
name = "linhello-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "linhellod"
path = "src/main.rs"

[dependencies]
linhello-common.workspace = true
linhello-core.workspace = true
linhello-biometrics.workspace = true
linhello-liveness.workspace = true
linhello-secureboot.workspace = true
linhello-fingerprint.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true }
serde_json.workspace = true
zeroize.workspace = true
libc = "0.2"

[dev-dependencies]
linhello-common.workspace = true
libc = "0.2"
